--- a/pc/05_UI_ADHPAbS03.html
+++ b/pc/05_UI_ADHPAbS03.html
@@ -126,20 +126,14 @@
                                                                 <td colspan="3">
                                                                     <fieldset class="box_radio_group">
                                                                         <legend class="sr_only">참여자 분류 선택</legend>
-                                                                        <div class="new_radio_item">
+                                                                        <div class="box_chk-group radio_group">
                                                                             <input type="radio" id="ptcpType1" name="ptcpType" value="graduate" checked>
-                                                                            <label for="ptcpType1" class="ptcp_radiocustom">
-                                                                                <span class="sr_only">선택지 1:</span>
-                                                                                <span class="label_text">&#9312; 졸업생 특화 프로그램을 운영하는 대학(원)의 졸업생, 졸업 유예자 및 예정자</span>
-                                                                            </label>
+                                                                            <label for="ptcpType1">&#9312; 졸업생 특화 프로그램을 운영하는 대학(원)의 졸업생, 졸업 유예자 및 예정자</label>
                                                                         </div>
 
-                                                                        <div class="new_radio_item">
+                                                                        <div class="box_chk-group radio_group">
                                                                             <input type="radio" id="ptcpType2" name="ptcpType" value="youth">
-                                                                            <label for="ptcpType2" class="ptcp_radiocustom">
-                                                                                <span class="sr_only">선택지 2:</span>
-                                                                                <span class="label_text">&#9313; ①에 해당하지 않는 직업계고 졸업생, 미취업 지역 청년</span>
-                                                                            </label>
+                                                                            <label for="ptcpType2">&#9313; ①에 해당하지 않는 직업계고 졸업생, 미취업 지역 청년</label>
                                                                         </div>
                                                                     </fieldset>
                                                                 </td>
@@ -275,14 +269,14 @@
                                                     <div class="agm_cho">
                                                         <fieldset class="box_radio_group" role="radiogroup" aria-labelledby="agmLabel">
                                                             <legend id="agmLabel" class="sr_only">개인정보 수집·이용·제공 동의</legend>                                                            
-                                                            <div class="new_radio_item">
+                                                            <div class="box_chk-group radio_group">
                                                                 <input type="radio" id="agmType1" name="agmType" value="yes">
                                                                 <label for="agmType1" class="ptcp_radiocustom">
                                                                     <span class="label_text">동의</span>
                                                                 </label>
                                                             </div>
 
-                                                            <div class="new_radio_item">
+                                                            <div class="box_chk-group radio_group">
                                                                 <input type="radio" id="agmType2" name="agmType" value="no">
                                                                 <label for="agmType2" class="ptcp_radiocustom">
                                                                     <span class="label_text">비동의</span>
