--- a/pc/06_UI_ADHPAbS04.html
+++ b/pc/06_UI_ADHPAbS04.html
@@ -111,7 +111,7 @@
                                                                 <td colspan="3">
                                                                     <fieldset class="box_radio_group" style="pointer-events: none;">
                                                                         <legend class="sr_only">참여자 분류 선택</legend>
-                                                                        <div class="new_radio_item">
+                                                                        <div class="box_chk-group radio_group">
                                                                             <input type="radio" id="ptcpType1" name="ptcpType" value="graduate" checked>
                                                                             <label for="ptcpType1" class="ptcp_radiocustom">
                                                                                                 <span class="sr_only">선택지 1:</span>
@@ -119,7 +119,7 @@
                                                                             </label>
                                                                         </div>
 
-                                                                        <div class="new_radio_item">
+                                                                        <div class="box_chk-group radio_group">
                                                                             <input type="radio" id="ptcpType2" name="ptcpType" value="youth">
                                                                             <label for="ptcpType2" class="ptcp_radiocustom">
                                                                                                 <span class="sr_only">선택지 2:</span>
