--- a/pc/11_UI_ADHPAbP09.html
+++ b/pc/11_UI_ADHPAbP09.html
@@ -111,7 +111,7 @@
                                                                 <td colspan="3">
                                                                     <fieldset class="box_radio_group" style="pointer-events: none;">
                                                                         <legend class="sr_only">참여자 분류 선택</legend>
-                                                                        <div class="new_radio_item">
+                                                                        <div class="box_chk-group radio_group">
                                                                             <input type="radio" id="ptcpType1" name="ptcpType" value="graduate" checked>
                                                                             <label for="ptcpType1" class="ptcp_radiocustom">
                                                                                 <span class="sr_only">선택지 1:</span>
@@ -119,7 +119,7 @@
                                                                             </label>
                                                                         </div>
 
-                                                                        <div class="new_radio_item">
+                                                                        <div class="box_chk-group radio_group">
                                                                             <input type="radio" id="ptcpType2" name="ptcpType" value="youth">
                                                                             <label for="ptcpType2" class="ptcp_radiocustom">
                                                                                 <span class="sr_only">선택지 2:</span>
@@ -277,7 +277,7 @@
                         </div>
                         <fieldset class="box_radio_group">
                             <legend>학과 검색결과 선택</legend>
-                            <div class="new_radio_item">
+                            <div class="box_chk-group radio_group">
                                 <input type="radio" onclick="searchModeValueCheck(this)" name="majorSearchCheckBox" id="11" value="11">
                                 <label for="11">
                                     <span class="sr_only">인문계열 &gt; 언어문학 &gt; 국어국문학 &gt; 국문역사학과군 선택</span>
@@ -285,7 +285,7 @@
                                 </label>
                             </div>
 
-                            <div class="new_radio_item">
+                            <div class="box_chk-group radio_group">
                                 <input type="radio" onclick="searchModeValueCheck(this)" name="majorSearchCheckBox" id="22" value="22">
                                 <label for="22">
                                     <span class="sr_only">인문계열 &gt; 언어문학 &gt; 국어국문학 &gt; 국문일문중문학과군 선택</span>
@@ -294,7 +294,7 @@
                             </div>
                             
                             
-                            <div class="new_radio_item">
+                            <div class="box_chk-group radio_group">
                                 <input type="radio" onclick="searchModeValueCheck(this)" name="majorSearchCheckBox" id="testtest" value="testtest">
                                 <label for="testtest">
                                         <span class="sr_only">인문계열 &gt; 언어문학 &gt; 국어국문학 &gt; 국문학과  선택</span>
@@ -302,7 +302,7 @@
                                 </label>
                             </div>
 
-                            <div class="new_radio_item">
+                            <div class="box_chk-group radio_group">
                                 <input type="radio" onclick="searchModeValueCheck(this)" name="majorSearchCheckBox" id="33" value="33">
                                 <label for="33">
                                         <span class="sr_only">인문계열 &gt; 언어문학 &gt; 국어국문학 &gt; 국어국문 영어영문학과군 선택</span>
@@ -310,7 +310,7 @@
                                 </label>
                             </div>
 
-                            <div class="new_radio_item">
+                            <div class="box_chk-group radio_group">
                                 <input type="radio" onclick="searchModeValueCheck(this)" name="majorSearchCheckBox" id="44" value="44">
                                 <label for="44">
                                         <span class="sr_only">인문계열 &gt; 언어문학 &gt; 국어국문학 &gt; 국어국문영어영문학과 선택</span>
@@ -318,7 +318,7 @@
                                 </label>
                             </div>
 
-                            <div class="new_radio_item">
+                            <div class="box_chk-group radio_group">
                                 <input type="radio" onclick="searchModeValueCheck(this)" name="majorSearchCheckBox" id="02020100002" value="02020100002">
                                 <label for="02020100002">
                                     <span class="sr_only">인문계열 &gt; 언어문학 &gt; 국어국문학 &gt; 국문역사학과군 선택</span>
@@ -326,7 +326,7 @@
                                 </label>
                             </div>
 
-                            <div class="new_radio_item">
+                            <div class="box_chk-group radio_group">
                                 <input type="radio" onclick="searchModeValueCheck(this)" name="majorSearchCheckBox" id="02020100003" value="02020100003">
                                 <label for="02020100003">
                                     <span class="sr_only">TEST &gt; TEST &gt; TEST &gt; TEST 선택</span>
@@ -334,7 +334,7 @@
                                 </label>
                             </div>
 
-                            <div class="new_radio_item">
+                            <div class="box_chk-group radio_group">
                                 <input type="radio" onclick="searchModeValueCheck(this)" name="majorSearchCheckBox" id="02020100004" value="02020100004">
                                 <label for="02020100004">
                                     <span class="sr_only">TEST &gt; TEST &gt; TEST &gt; TEST 선택</span>
@@ -342,7 +342,7 @@
                                 </label>
                             </div>
 
-                            <div class="new_radio_item">
+                            <div class="box_chk-group radio_group">
                                 <input type="radio" onclick="searchModeValueCheck(this)" name="majorSearchCheckBox" id="02020100096" value="02020100096">
                                 <label for="02020100096">
                                     <span class="sr_only">TEST &gt; TEST &gt; TEST &gt; TEST 선택</span>
@@ -350,7 +350,7 @@
                                 </label>
                             </div>
 
-                            <div class="new_radio_item">
+                            <div class="box_chk-group radio_group">
                                 <input type="radio" onclick="searchModeValueCheck(this)" name="majorSearchCheckBox" id="02020100099" value="02020100099">
                                 <label for="02020100099">
                                     <span class="sr_only">TEST &gt; TEST &gt; TEST &gt; TEST 선택</span>
@@ -358,7 +358,7 @@
                                 </label>
                             </div>
 
-                            <div class="new_radio_item">
+                            <div class="box_chk-group radio_group">
                                 <input type="radio" onclick="searchModeValueCheck(this)" name="majorSearchCheckBox" id="02020100006" value="02020100006">
                                 <label for="02020100006">
                                     <span class="sr_only">TEST &gt; TEST &gt; TEST &gt; TEST 선택</span>
@@ -366,7 +366,7 @@
                                 </label>
                             </div>
 
-                            <div class="new_radio_item">
+                            <div class="box_chk-group radio_group">
                                 <input type="radio" onclick="searchModeValueCheck(this)" name="majorSearchCheckBox" id="02020100007" value="02020100007">
                                 <label for="02020100007">
                                     <span class="sr_only">TEST &gt; TEST &gt; TEST &gt; TEST 선택</span>
@@ -374,7 +374,7 @@
                                 </label>
                             </div>
 
-                            <div class="new_radio_item">
+                            <div class="box_chk-group radio_group">
                                 <input type="radio" onclick="searchModeValueCheck(this)" name="majorSearchCheckBox" id="02020100074" value="02020100074">
                                 <label for="02020100074">
                                     <span class="sr_only">TEST &gt; TEST &gt; TEST &gt; TEST 선택</span>
