--- a/pc/12_UI_ADHPAbP10.html
+++ b/pc/12_UI_ADHPAbP10.html
@@ -123,7 +123,7 @@
                                                                 <td colspan="3">
                                                                     <fieldset class="box_radio_group">
                                                                         <legend class="sr_only">참여자 분류 선택</legend>
-                                                                        <div class="new_radio_item">
+                                                                        <div class="box_chk-group radio_group">
                                                                             <input type="radio" id="ptcpType1" name="ptcpType" value="graduate" checked>
                                                                             <label for="ptcpType1" class="ptcp_radiocustom">
                                                                                                 <span class="sr_only">선택지 1:</span>
@@ -131,7 +131,7 @@
                                                                             </label>
                                                                         </div>
 
-                                                                        <div class="new_radio_item">
+                                                                        <div class="box_chk-group radio_group">
                                                                             <input type="radio" id="ptcpType2" name="ptcpType" value="youth">
                                                                             <label for="ptcpType2" class="ptcp_radiocustom">
                                                                                                 <span class="sr_only">선택지 2:</span>
@@ -266,14 +266,14 @@
                                                     <div class="agm_cho">
                                                         <fieldset class="box_radio_group" role="radiogroup" aria-labelledby="agmLabel">
                                                             <legend id="agmLabel" class="sr_only">개인정보 수집·이용·제공 동의</legend>                                                            
-                                                            <div class="new_radio_item">
+                                                            <div class="box_chk-group radio_group">
                                                                 <input type="radio" id="agmType1" name="agmType" value="yes">
                                                                 <label for="agmType1" class="ptcp_radiocustom">
                                                                         <span class="label_text">동의</span>
                                                                 </label>
                                                             </div>
 
-                                                            <div class="new_radio_item">
+                                                            <div class="box_chk-group radio_group">
                                                                 <input type="radio" id="agmType2" name="agmType" value="no">
                                                                 <label for="agmType2" class="ptcp_radiocustom">
                                                                         <span class="label_text">비동의</span>
@@ -346,13 +346,13 @@
                                 <div class="radio_tit"><p class="b1_sb">개인정보 수집·이용 목적 등에 대하여 동의합니다.</p></div>
                                 <fieldset class="radio_group box_radio_group" role="radiogroup" aria-labelledby="pvLabel">
                                     <legend id="pvLabel" class="sr_only">개인정보 수집·이용 목적 등에 대한 동의여부</legend>                                                            
-                                    <div class="new_radio_item">
+                                    <div class="box_chk-group radio_group">
                                         <input type="radio" id="pvType1" name="pvType" value="yes">
                                         <label for="pvType1" class="label_radiocustom">
                                                         <span class="label_text">예</span>
                                         </label>
                                     </div>
-                                    <div class="new_radio_item">
+                                    <div class="box_chk-group radio_group">
                                         <input type="radio" id="pvType2" name="pvType" value="no">
                                         <label for="pvType2" class="label_radiocustom">
                                                         <span class="label_text">아니오</span>
@@ -398,13 +398,13 @@
                                 <div class="radio_tit"><p class="b1_sb">고유식별정보 제공에 대하여 동의합니다.</p></div>
                                 <fieldset class="radio_group box_radio_group" role="radiogroup" aria-labelledby="identifierLabel">
                                     <legend id="identifierLabel" class="sr_only">고유식별정보 제공에 대한 동의여부</legend>                                                            
-                                    <div class="new_radio_item">
+                                    <div class="box_chk-group radio_group">
                                         <input type="radio" id="identifierType1" name="identifierType" value="yes">
                                         <label for="identifierType1" class="label_radiocustom">
                                                         <span class="label_text">예</span>
                                         </label>
                                     </div>
-                                    <div class="new_radio_item">
+                                    <div class="box_chk-group radio_group">
                                         <input type="radio" id="identifierType2" name="identifierType" value="no">
                                         <label for="identifierType2" class="label_radiocustom">
                                                         <span class="label_text">아니오</span>
@@ -425,13 +425,13 @@
                                 <div class="radio_tit"><p class="b1_sb">개인정보 제3자 제공에 대하여 동의합니다.</p></div>
                                 <fieldset class="radio_group box_radio_group" role="radiogroup" aria-labelledby="thirdPartyLabel">
                                     <legend id="thirdPartyLabel" class="sr_only">개인정보 제3자 제공에 대한 동의여부</legend>                                                            
-                                    <div class="new_radio_item">
+                                    <div class="box_chk-group radio_group">
                                         <input type="radio" id="thirdPartyType1" name="thirdPartyType" value="yes">
                                         <label for="thirdPartyType1" class="label_radiocustom">
                                                         <span class="label_text">예</span>
                                         </label>
                                     </div>
-                                    <div class="new_radio_item">
+                                    <div class="box_chk-group radio_group">
                                         <input type="radio" id="thirdPartyType2" name="thirdPartyType" value="no">
                                         <label for="thirdPartyType2" class="label_radiocustom">
                                                         <span class="label_text">아니오</span>
@@ -484,13 +484,13 @@
                                 <div class="radio_tit"><p class="b1_sb">불이익 안내에 대하여 동의합니다.</p></div>
                                 <fieldset class="radio_group box_radio_group" role="radiogroup" aria-labelledby="advLabel">
                                     <legend id="advLabel" class="sr_only">불이익 안내에 대한 동의여부</legend>                                                            
-                                    <div class="new_radio_item">
+                                    <div class="box_chk-group radio_group">
                                         <input type="radio" id="advType1" name="advType" value="yes">
                                         <label for="advType1" class="label_radiocustom">
                                                         <span class="label_text">예</span>
                                         </label>
                                     </div>
-                                    <div class="new_radio_item">
+                                    <div class="box_chk-group radio_group">
                                         <input type="radio" id="advType2" name="advType" value="no">
                                         <label for="advType2" class="label_radiocustom">
                                                         <span class="label_text">아니오</span>
