--- a/pc/20_UI_ADHPAdS04.html
+++ b/pc/20_UI_ADHPAdS04.html
@@ -92,7 +92,7 @@
                                                         <fieldset class="box_radio_group" aria-labelledby="que1_label">
                                                             <ul class="radio_list">
                                                                 <li>
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="que_1-1" name="que_1" value="1">
                                                                         <label for="que_1-1">
                                                                             <span class="label_text">전혀 그렇지 않다</span>
@@ -100,7 +100,7 @@
                                                                     </div>
                                                                 </li>
                                                                 <li>
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="que_1-2" name="que_1" value="2">
                                                                         <label for="que_1-2">
                                                                             <span class="label_text">그렇지 않다</span>
@@ -108,7 +108,7 @@
                                                                     </div>
                                                                 </li>
                                                                 <li>
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="que_1-3" name="que_1" value="3">
                                                                         <label for="que_1-3">
                                                                             <span class="label_text">보통이다</span>
@@ -116,7 +116,7 @@
                                                                     </div>
                                                                 </li>
                                                                 <li>
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="que_1-4" name="que_1" value="4">
                                                                         <label for="que_1-4">
                                                                             <span class="label_text">그렇다</span>
@@ -124,7 +124,7 @@
                                                                     </div>
                                                                 </li>
                                                                 <li>
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="que_1-5" name="que_1" value="5">
                                                                         <label for="que_1-5">
                                                                             <span class="label_text">매우 그렇다</span>
@@ -142,7 +142,7 @@
                                                         <fieldset class="box_radio_group" aria-labelledby="que2_label">
                                                             <ul class="radio_list">
                                                                 <li>
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="que_2-1" name="que_2" value="1">
                                                                         <label for="que_2-1">
                                                                             <span class="label_text">전혀 그렇지 않다</span>
@@ -150,7 +150,7 @@
                                                                     </div>
                                                                 </li>
                                                                 <li>
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="que_2-2" name="que_2" value="2">
                                                                         <label for="que_2-2">
                                                                             <span class="label_text">그렇지 않다</span>
@@ -158,7 +158,7 @@
                                                                     </div>
                                                                 </li>
                                                                 <li>
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="que_2-3" name="que_2" value="3">
                                                                         <label for="que_2-3">
                                                                             <span class="label_text">보통이다</span>
@@ -166,7 +166,7 @@
                                                                     </div>
                                                                 </li>
                                                                 <li>
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="que_2-4" name="que_2" value="4">
                                                                         <label for="que_2-4">
                                                                             <span class="label_text">그렇다</span>
@@ -174,7 +174,7 @@
                                                                     </div>
                                                                 </li>
                                                                 <li>
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="que_2-5" name="que_2" value="5">
                                                                         <label for="que_2-5">
                                                                             <span class="label_text">매우 그렇다</span>
@@ -192,7 +192,7 @@
                                                         <fieldset class="box_radio_group" aria-labelledby="que3_label">
                                                             <ul class="radio_list">
                                                                 <li>
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="que_3-1" name="que_3" value="1">
                                                                         <label for="que_3-1">
                                                                             <span class="label_text">전혀 그렇지 않다</span>
@@ -200,7 +200,7 @@
                                                                     </div>
                                                                 </li>
                                                                 <li>
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="que_3-2" name="que_3" value="2">
                                                                         <label for="que_3-2">
                                                                             <span class="label_text">그렇지 않다</span>
@@ -208,7 +208,7 @@
                                                                     </div>
                                                                 </li>
                                                                 <li>
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="que_3-3" name="que_3" value="3">
                                                                         <label for="que_3-3">
                                                                             <span class="label_text">보통이다</span>
@@ -216,7 +216,7 @@
                                                                     </div>
                                                                 </li>
                                                                 <li>
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="que_3-4" name="que_3" value="4">
                                                                         <label for="que_3-4">
                                                                             <span class="label_text">그렇다</span>
@@ -224,7 +224,7 @@
                                                                     </div>
                                                                 </li>
                                                                 <li>
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="que_3-5" name="que_3" value="5">
                                                                         <label for="que_3-5">
                                                                             <span class="label_text">매우 그렇다</span>
