--- a/pc/UI_ADHPCbM09.html
+++ b/pc/UI_ADHPCbM09.html
@@ -116,7 +116,7 @@
                                                                 <td colspan="3">
                                                                     <fieldset class="box_radio_group type_unselect">
                                                                         <legend class="sr_only">참여자 분류 선택</legend>
-                                                                        <div class="new_radio_item">
+                                                                        <div class="box_chk-group radio_group">
                                                                             <input type="radio" class="ptcpType1" id="ptcpType1" name="ptcpType" value="graduate" checked>
                                                                             <label for="ptcpType1" class="unselect_label">
                                                                                 <span class="sr_only">선택지 1:</span>
@@ -124,7 +124,7 @@
                                                                             </label>
                                                                         </div>
 
-                                                                        <div class="new_radio_item">
+                                                                        <div class="box_chk-group radio_group">
                                                                             <input type="radio" class="ptcpType2" id="ptcpType2" name="ptcpType" value="youth">
                                                                             <label for="ptcpType2" class="unselect_label">
                                                                                 <span class="sr_only">선택지 2:</span>
@@ -175,7 +175,7 @@
                                                 <div class="type_area box_radio_group type_unselect">
                                                     <ul class="item_type">
                                                         <li>
-                                                            <div class="new_radio_item">
+                                                            <div class="box_chk-group radio_group">
                                                                 <input type="radio" id="빌드업프로젝트" name="참여유형선택" checked>
                                                                 <label for="빌드업프로젝트">
                                                                     <span class="w">
@@ -186,7 +186,7 @@
                                                             </div>
                                                         </li>
                                                         <li>
-                                                            <div class="new_radio_item">
+                                                            <div class="box_chk-group radio_group">
                                                                 <input type="radio" id="점프업프로젝트" name="참여유형선택">
                                                                 <label for="점프업프로젝트">
                                                                     <span class="w">
@@ -214,14 +214,14 @@
                                                     <div class="agm_cho">
                                                         <fieldset class="box_radio_group type_unselect" role="radiogroup" aria-labelledby="agmLabel">
                                                             <legend id="agmLabel" class="sr_only">개인정보 수집·이용·제공 동의</legend>                                                            
-                                                            <div class="new_radio_item">
+                                                            <div class="box_chk-group radio_group">
                                                                 <input type="radio" id="agmType1" name="agmType" value="yes" checked>
                                                                 <label for="agmType1" class="unselect_label">
                                                                     <span class="label_text">동의</span>
                                                                 </label>
                                                             </div>
 
-                                                            <div class="new_radio_item">
+                                                            <div class="box_chk-group radio_group">
                                                                 <input type="radio" id="agmType2" name="agmType" value="no">
                                                                 <label for="agmType2" class="unselect_label">
                                                                     <span class="label_text">동의안함</span>
