--- a/pc/UI_ADHPCdS02.html
+++ b/pc/UI_ADHPCdS02.html
@@ -294,13 +294,13 @@
                                                                     <div class="type_area box_radio_group">
                                                                         <ul class="item_type radio_box_twin js_c">
                                                                             <li>
-                                                                                <div class="new_radio_item">
+                                                                                <div class="box_chk-group radio_group">
                                                                                     <input type="radio" id="onCampus1" name="institution">
                                                                                     <label for="onCampus1"><span>교내</span></label>
                                                                                 </div>
                                                                             </li>
                                                                             <li>
-                                                                                <div class="new_radio_item">
+                                                                                <div class="box_chk-group radio_group">
                                                                                     <input type="radio" id="outCampus1" name="institution">
                                                                                     <label for="outCampus1"><span>교외</span></label>
                                                                                 </div>
@@ -469,13 +469,13 @@
                                                                     <div class="type_area box_radio_group">
                                                                         <ul class="item_type radio_box_twin js_c">
                                                                             <li>
-                                                                                <div class="new_radio_item">
+                                                                                <div class="box_chk-group radio_group">
                                                                                     <input type="radio" id="on2" name="institution">
                                                                                     <label for="onCampus2"><span>교내</span></label>
                                                                                 </div>
                                                                             </li>
                                                                             <li>
-                                                                                <div class="new_radio_item">
+                                                                                <div class="box_chk-group radio_group">
                                                                                     <input type="radio" id="outCampus2" name="institution">
                                                                                     <label for="outCampus2"><span>교외</span></label>
                                                                                 </div>
@@ -545,13 +545,13 @@
                                                                     <div class="type_area box_radio_group">
                                                                         <ul class="item_type radio_box_twin js_c">
                                                                             <li>
-                                                                                <div class="new_radio_item">
+                                                                                <div class="box_chk-group radio_group">
                                                                                     <input type="radio" id="onCampus3" name="institution">
                                                                                     <label for="onCampus3"><span>교내</span></label>
                                                                                 </div>
                                                                             </li>
                                                                             <li>
-                                                                                <div class="new_radio_item">
+                                                                                <div class="box_chk-group radio_group">
                                                                                     <input type="radio" id="outCampus3" name="institution">
                                                                                     <label for="outCampus3"><span>교외</span></label>
                                                                                 </div>
@@ -621,13 +621,13 @@
                                                                     <div class="type_area box_radio_group">
                                                                         <ul class="item_type radio_box_twin js_c">
                                                                             <li>
-                                                                                <div class="new_radio_item">
+                                                                                <div class="box_chk-group radio_group">
                                                                                     <input type="radio" id="onCampus4" name="institution">
                                                                                     <label for="onCampus4"><span>교내</span></label>
                                                                                 </div>
                                                                             </li>
                                                                             <li>
-                                                                                <div class="new_radio_item">
+                                                                                <div class="box_chk-group radio_group">
                                                                                     <input type="radio" id="outCampus4" name="institution">
                                                                                     <label for="outCampus4"><span>교외</span></label>
                                                                                 </div>
