--- a/pc/UI_ADHPCfS02.html
+++ b/pc/UI_ADHPCfS02.html
@@ -143,14 +143,14 @@
                                                             <td>
                                                                 <fieldset class="box_radio_group flex_box" role="radiogroup" aria-labelledby="participationLabel">
                                                                     <legend id="participationLabel" class="sr_only">취업지원유형 선택</legend>                                                            
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="participationType1" name="participationType" value="">
                                                                         <label for="participationType1">
                                                                             <span class="label_text">자기주도형</span>
                                                                         </label>
                                                                     </div>
 
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="participationType2" name="participationType" value="">
                                                                         <label for="participationType2">
                                                                             <span class="label_text">서비스참여형</span>
@@ -184,35 +184,35 @@
                                                             <td>
                                                                 <fieldset class="box_radio_group flex_box" role="radiogroup" aria-labelledby="hopeLabel">
                                                                     <legend id="hopeLabel" class="sr_only">희망진로 선택</legend>                                                            
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="hopeType1" name="hopeType" value="">
                                                                         <label for="hopeType1">
                                                                             <span class="label_text">일반취업(일반기업, 공공기관)</span>
                                                                         </label>
                                                                     </div>
 
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="hopeType2" name="hopeType" value="">
                                                                         <label for="hopeType2">
                                                                             <span class="label_text">창업</span>
                                                                         </label>
                                                                     </div>
 
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="hopeType3" name="hopeType" value="">
                                                                         <label for="hopeType3">
                                                                             <span class="label_text">진학</span>
                                                                         </label>
                                                                     </div>
 
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="hopeType4" name="hopeType" value="">
                                                                         <label for="hopeType4">
                                                                             <span class="label_text">시험준비</span>
                                                                         </label>
                                                                     </div>
                                                                     
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="hopeType5" name="hopeType" value="">
                                                                         <label for="hopeType5">
                                                                             <span class="label_text">기타</span>
@@ -294,21 +294,21 @@
                                                             <td class="td_tgregion">
                                                                 <fieldset class="box_radio_group flex_box" role="radiogroup" aria-labelledby="tgregionLabel">
                                                                     <legend id="tgregionLabel" class="sr_only">목표근무지역 선택</legend>                                                            
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="tgregionType1" name="tgregionType" value="">
                                                                         <label for="tgregionType1">
                                                                             <span class="label_text">수도권(서울, 경기)</span>
                                                                         </label>
                                                                     </div>
 
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="tgregionType2" name="tgregionType" value="">
                                                                         <label for="tgregionType2">
                                                                             <span class="label_text">광역시(지방 대도시)</span>
                                                                         </label>
                                                                     </div>
 
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="tgregionType3" name="tgregionType" value="">
                                                                         <label for="tgcompanyType6">
                                                                             <span class="label_text">기타지역</span>
@@ -335,42 +335,42 @@
                                                             <td class="td_tgcompany">
                                                                 <fieldset class="box_radio_group flex_box" role="radiogroup" aria-labelledby="tgcompanyLabel">
                                                                     <legend id="tgcompanyLabel" class="sr_only">목표기업군 선택</legend>                                                            
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="tgcompanyType1" name="tgcompanyType" value="">
                                                                         <label for="tgcompanyType1">
                                                                             <span class="label_text">중소기업</span>
                                                                         </label>
                                                                     </div>
 
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="tgcompanyType2" name="tgcompanyType" value="">
                                                                         <label for="tgcompanyType2">
                                                                             <span class="label_text">중견기업</span>
                                                                         </label>
                                                                     </div>
 
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="tgcompanyType3" name="tgcompanyType" value="">
                                                                         <label for="tgcompanyType3">
                                                                             <span class="label_text">대기업</span>
                                                                         </label>
                                                                     </div>
 
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="tgcompanyType4" name="tgcompanyType" value="">
                                                                         <label for="tgcompanyType4">
                                                                             <span class="label_text">공공기관</span>
                                                                         </label>
                                                                     </div>
                                                                     
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="tgcompanyType5" name="tgcompanyType" value="">
                                                                         <label for="tgcompanyType5">
                                                                             <span class="label_text">외국계</span>
                                                                         </label>
                                                                     </div>
 
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="tgcompanyType6" name="tgcompanyType" value="">
                                                                         <label for="tgcompanyType gap_box046">
                                                                             <span class="label_text">기타</span>
