--- a/pc/07_UI_ADHPAbS05.html
+++ b/pc/07_UI_ADHPAbS05.html
@@ -124,7 +124,7 @@
                                                                 <td colspan="3">
                                                                     <fieldset class="box_radio_group">
                                                                         <legend class="sr_only">참여자 분류 선택</legend>
-                                                                        <div class="new_radio_item">
+                                                                        <div class="box_chk-group radio_group">
                                                                             <input type="radio" id="ptcpType1" name="ptcpType" value="graduate" checked>
                                                                             <label for="ptcpType1" class="ptcp_radiocustom">
                                                                                 <span class="sr_only">선택지 1:</span>
@@ -132,7 +132,7 @@
                                                                             </label>
                                                                         </div>
 
-                                                                        <div class="new_radio_item">
+                                                                        <div class="box_chk-group radio_group">
                                                                             <input type="radio" id="ptcpType2" name="ptcpType" value="youth">
                                                                             <label for="ptcpType2" class="ptcp_radiocustom">
                                                                                 <span class="sr_only">선택지 2:</span>
@@ -389,14 +389,14 @@
                                                     <div class="agm_cho">
                                                         <fieldset class="box_radio_group" role="radiogroup" aria-labelledby="agmLabel">
                                                             <legend id="agmLabel" class="sr_only">개인정보 수집·이용·제공 동의</legend>                                                            
-                                                            <div class="new_radio_item">
+                                                            <div class="box_chk-group radio_group">
                                                                 <input type="radio" id="agmType1" name="agmType" value="yes">
                                                                 <label for="agmType1" class="ptcp_radiocustom">
                                                                         <span class="label_text">동의</span>
                                                                 </label>
                                                             </div>
 
-                                                            <div class="new_radio_item">
+                                                            <div class="box_chk-group radio_group">
                                                                 <input type="radio" id="agmType2" name="agmType" value="no">
                                                                 <label for="agmType2" class="ptcp_radiocustom">
                                                                         <span class="label_text">비동의</span>
