--- a/pc/10_UI_ADHPAbP08.html
+++ b/pc/10_UI_ADHPAbP08.html
@@ -111,7 +111,7 @@
                                                                 <td colspan="3">
                                                                     <fieldset class="box_radio_group" style="pointer-events: none;">
                                                                         <legend class="sr_only">참여자 분류 선택</legend>
-                                                                        <div class="new_radio_item">
+                                                                        <div class="box_chk-group radio_group">
                                                                             <input type="radio" id="ptcpType1" name="ptcpType" value="graduate" checked>
                                                                             <label for="ptcpType1" class="ptcp_radiocustom">
                                                                                                 <span class="sr_only">선택지 1:</span>
@@ -119,7 +119,7 @@
                                                                             </label>
                                                                         </div>
 
-                                                                        <div class="new_radio_item">
+                                                                        <div class="box_chk-group radio_group">
                                                                             <input type="radio" id="ptcpType2" name="ptcpType" value="youth">
                                                                             <label for="ptcpType2" class="ptcp_radiocustom">
                                                                                                 <span class="sr_only">선택지 2:</span>
@@ -449,7 +449,7 @@
                                 <legend>예시학과 선택</legend>
 
                                 <div class="direct_input_option">
-                                    <div class="new_radio_item">
+                                    <div class="box_chk-group radio_group">
                                         <input type="radio" name="majorSelect" id="majorDirect" aria-controls="major_input_wrap" aria-describedby="major_input_desc">
                                         <label for="majorDirect">
                                                         <span class="sr_only">학과명 직접 입력 선택</span>
@@ -472,7 +472,7 @@
                                 <div style="display: block;" class="major_list_wrapper" role="region" aria-label="예시학과 목록">
                                     <ul class="major_list">
                                         <li>
-                                            <div class="new_radio_item">
+                                            <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major1" />
                                                 <label for="major1">
                                                                         <span class="sr_only">국문역사학과군 선택</span>
@@ -481,7 +481,7 @@
                                             <label for="major1">국문역사학과군</label>
                                         </li>
                                         <li>
-                                            <div class="new_radio_item">
+                                            <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major2" />
                                                 <label for="major2">
                                                                         <span class="sr_only">국문일문중문학과군 선택</span>
@@ -490,7 +490,7 @@
                                             <label for="major2">국문일문중문학과군</label>
                                         </li>
                                         <li>
-                                            <div class="new_radio_item">
+                                            <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major3" />
                                                 <label for="major3">
                                                                         <span class="sr_only">국문영문학과군 선택</span>
@@ -499,7 +499,7 @@
                                             <label for="major3">국문영문학과군</label>
                                         </li>
                                         <li>
-                                            <div class="new_radio_item">
+                                            <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major4" />
                                                 <label for="major4">
                                                                         <span class="sr_only">국문학과군 선택</span>
@@ -508,7 +508,7 @@
                                             <label for="major4">국문학과군</label>
                                         </li>
                                         <li>
-                                            <div class="new_radio_item">
+                                            <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major5" />
                                                 <label for="major5">
                                                                         <span class="sr_only">국어국문문 영어영문학과군 선택</span>
@@ -517,7 +517,7 @@
                                             <label for="major5">국어국문문 영어영문학과군</label>
                                         </li>
                                         <li>
-                                            <div class="new_radio_item">
+                                            <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major6" />
                                                 <label for="major6">
                                                                         <span class="sr_only">국어국문영어영문학과 선택</span>
@@ -526,7 +526,7 @@
                                             <label for="major6">국어국문영어영문학과</label>
                                         </li>
                                         <li>
-                                            <div class="new_radio_item">
+                                            <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major7" />
                                                 <label for="major7">
                                                                         <span class="sr_only">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST  선택</span>
@@ -535,7 +535,7 @@
                                             <label for="major7">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                         </li>
                                         <li>
-                                            <div class="new_radio_item">
+                                            <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major8" />
                                                 <label for="major8">
                                                                         <span class="sr_only">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST  선택</span>
@@ -544,7 +544,7 @@
                                             <label for="major8">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                         </li>
                                         <li>
-                                            <div class="new_radio_item">
+                                            <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major9" />
                                                 <label for="major9">
                                                                         <span class="sr_only">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST  선택</span>
@@ -553,7 +553,7 @@
                                             <label for="major9">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                         </li>
                                         <li>
-                                            <div class="new_radio_item">
+                                            <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major10" />
                                                 <label for="major10">
                                                                         <span class="sr_only">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST 선택</span>
@@ -562,7 +562,7 @@
                                             <label for="major10">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST</label>
                                         </li>
                                         <li>
-                                            <div class="new_radio_item">
+                                            <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major11" />
                                                 <label for="major11">
                                                                         <span class="sr_only">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST  선택</span>
@@ -571,7 +571,7 @@
                                             <label for="major11">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                         </li>
                                         <li>
-                                            <div class="new_radio_item">
+                                            <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major12" />
                                                 <label for="major12">
                                                                         <span class="sr_only">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST  선택</span>
@@ -580,7 +580,7 @@
                                             <label for="major12">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                         </li>
                                         <li>
-                                            <div class="new_radio_item">
+                                            <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major13" />
                                                 <label for="major13">
                                                                         <span class="sr_only">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST  선택</span>
@@ -589,7 +589,7 @@
                                             <label for="major13">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                         </li>
                                         <li>
-                                            <div class="new_radio_item">
+                                            <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major14" />
                                                 <label for="major14">
                                                                         <span class="sr_only">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST  선택</span>
@@ -598,7 +598,7 @@
                                             <label for="major14">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                         </li>
                                         <li>
-                                            <div class="new_radio_item">
+                                            <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major15" />
                                                 <label for="major15">
                                                                         <span class="sr_only">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST  선택</span>
@@ -607,7 +607,7 @@
                                             <label for="major7">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                         </li>
                                         <li>
-                                            <div class="new_radio_item">
+                                            <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major16" />
                                                 <label for="major16">
                                                                         <span class="sr_only">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST  선택</span>
@@ -616,7 +616,7 @@
                                             <label for="major16">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                         </li>
                                         <li>
-                                            <div class="new_radio_item">
+                                            <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major17" />
                                                 <label for="major17">
                                                                         <span class="sr_only">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST  선택</span>
@@ -625,7 +625,7 @@
                                             <label for="major17">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST </label>
                                         </li>
                                         <li>
-                                            <div class="new_radio_item">
+                                            <div class="box_chk-group radio_group">
                                                 <input type="radio" name="majorSelect" id="major18" />
                                                 <label for="major18">
                                                                         <span class="sr_only">TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST TEST  선택</span>
