--- a/pc/UI_ADHPCfS04.html
+++ b/pc/UI_ADHPCfS04.html
@@ -131,14 +131,14 @@
                                                             <td>
                                                                 <fieldset class="box_radio_group flex_box" disabled role="radiogroup" aria-labelledby="participationLabel">
                                                                     <legend id="participationLabel" class="sr_only">취업지원유형 선택</legend>                                                            
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="participationType1" name="participationType" value="">
                                                                         <label for="participationType1">
                                                                             <span class="label_text">자기주도형</span>
                                                                         </label>
                                                                     </div>
 
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="participationType2" name="participationType" value="" checked>
                                                                         <label for="participationType2">
                                                                             <span class="label_text">서비스참여형</span>
