--- a/pc/UI_ADHPChS07.html
+++ b/pc/UI_ADHPChS07.html
@@ -134,14 +134,14 @@
                                                             <td colspan="3"> 
                                                                 <fieldset class="box_radio_group flex_box" disabled role="radiogroup" aria-labelledby="participationLabel">
                                                                     <legend id="participationLabel" class="sr_only">취업지원유형 선택</legend>                                                            
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="participationType1" name="participationType" value="">
                                                                         <label for="participationType1">
                                                                             <span class="label_text">자기주도형</span>
                                                                         </label>
                                                                     </div>
 
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="participationType2" name="participationType" value="" checked>
                                                                         <label for="participationType2">
                                                                             <span class="label_text">서비스참여형</span>
@@ -616,7 +616,7 @@
                                                             <td>
                                                                 <fieldset class="box_radio_group radio_focus_group" role="radiogroup" aria-labelledby="subsidyLabel1">
                                                                     <legend id="subsidyLabel1" class="sr_only">미래내일 일경험사업 지원금 수령여부 선택</legend>                                                            
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="subsidy1_yes" name="subsidy1" value="yes" checked>
                                                                         <label for="subsidy1_yes">
                                                                             <span class="label_text">예</span>
@@ -626,7 +626,7 @@
                                                                         <input class="focus_on money_amount" type="text" class="yes_input" id="yesInput1" name="yesInput1" aria-disabled="true" inputmode="numeric" value="1,000,000">
                                                                         <span>원</span>
                                                                     </div>
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="subsidy1_no" name="subsidy1" value="no">
                                                                         <label for="subsidy1_no">
                                                                             <span class="label_text">아니오</span>
@@ -640,7 +640,7 @@
                                                             <td>
                                                                 <fieldset class="box_radio_group radio_focus_group" role="radiogroup" aria-labelledby="subsidyLabel2">
                                                                     <legend id="subsidyLabel2" class="sr_only">내일배움카드 훈련장려금 수령여부 선택</legend>                                                            
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="subsidy2_yes" name="subsidy2" value="yes" checked>
                                                                         <label for="subsidy2_yes">
                                                                             <span class="label_text">예</span>
@@ -650,7 +650,7 @@
                                                                         <input class="focus_on money_amount" type="text" class="yes_input" id="yesInput2" name="yesInput2" aria-disabled="true" inputmode="numeric" value="1,000,000">
                                                                         <span>원</span>
                                                                     </div>
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="subsidy2_no" name="subsidy2" value="no">
                                                                         <label for="subsidy2_no">
                                                                             <span class="label_text">아니오</span>
@@ -680,14 +680,14 @@
                                                             <td>
                                                                 <fieldset class="box_radio_group flex_box" role="radiogroup" aria-labelledby="existLabel">
                                                                     <legend id="existLabel" class="sr_only">개인별 월(1일~말일) 20만원 초과여부 선택</legend>                                                            
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="existType1" name="existType" value="" checked>
                                                                         <label for="existType1">
                                                                             <span class="label_text">있음</span>
                                                                         </label>
                                                                     </div>
 
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="existType2" name="existType" value="">
                                                                         <label for="existType2">
                                                                             <span class="label_text">없음</span>
@@ -701,14 +701,14 @@
                                                             <td>
                                                                 <fieldset class="box_radio_group flex_box" role="radiogroup" aria-labelledby="accrueLabel">
                                                                     <legend id="accrueLabel" class="sr_only">수당 누적 총액 100만원 초과여부 선택</legend>                                                            
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="accrueType1" name="accrueType" value=""checked>
                                                                         <label for="accrueType1">
                                                                             <span class="label_text">있음</span>
                                                                         </label>
                                                                     </div>
 
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="accrueType2" name="accrueType" value="">
                                                                         <label for="accrueType2">
                                                                             <span class="label_text">없음</span>
@@ -727,14 +727,14 @@
                                                             <td>
                                                                 <fieldset class="box_radio_group flex_box" role="radiogroup" aria-labelledby="agreeChkLabel">
                                                                     <legend id="agreeChkLabel" class="sr_only">참여수당 관련 부정수급 방지 확약서 동의 여부 선택</legend>                                                            
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="agreeChkType1" name="agreeChkType" value=""checked>
                                                                         <label for="agreeChkType1">
                                                                             <span class="label_text">동의</span>
                                                                         </label>
                                                                     </div>
 
-                                                                    <div class="new_radio_item">
+                                                                    <div class="box_chk-group radio_group">
                                                                         <input type="radio" id="agreeChkType2" name="agreeChkType" value="">
                                                                         <label for="agreeChkType2">
                                                                             <span class="label_text">동의안함</span>
